1999-04-18  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* objects/gnomekoban.c (empty_signals): Removed check wheater a
 	level is finished or not.
	(crate_signals): New function that checks wheater a level is
 	finshed or not.  This fixes a bug, that one has be able the finish
 	a level, without push all boulders on the marks.

1999-03-03  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* io.c:
	* preferences.c:
	* main.c:
	* *.caves: The translated cave names are now written into 
        the cave files.

1999-03-02  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* Makefile.am: Added installation of mime-type information.

	* preferences.c: Added variable 'default_game'.
	(preferences_restore): Load 'default_game' if specified.

	* main.c: Added 'game' command line option.

	* README: Updated the cave file description.

1999-02-23  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* main.c (game_update_title): Load the font by gtkrc.  This fix
	made the Korean translation visible.

	* gnome-stonesrc, gnome-stonesrc.ko: New files, gnome-stone
	specific gtkrc files.

1999-02-07  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* main.c: Moved to game-widget stuff to the new files view.c and
 	view.h.

	* io.c (cave_load_object_options): Fixed bug, that could lead to a
 	segfault.

	* Makefile.am (gnome_stones_SOURCES): Added view.c and view.h.

1999-01-26  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* main.c (scan_private_game_directory): Kill file menu.

1999-01-17  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* main.c: Removed 'parse_func'

	* preferences.[ch]: Removed unused 'discard_session_file'.

1999-01-17  Tomas Ogren  <stric@ing.umu.se>

	* main.c: Better realize the main window.. fvwm2 got cranky..

1999-01-10  Nat Friedman  <nat@nat.org>

	* main.c: Standardized the menus.

1999-01-10  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* preferences.c (preferences_dialog_show): New function.